--- a/Kurs7_Labb1_MsUnit.Test/Kurs7_Labb1_MsUnit.Test.csproj
+++ b/Kurs7_Labb1_MsUnit.Test/Kurs7_Labb1_MsUnit.Test.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kurs7_Labb1_MsUnit\Kurs7_Labb1_MsUnit.csproj" />
+  </ItemGroup>
+
 </Project>
